--- a/Grimshade/Grimshade.csproj
+++ b/Grimshade/Grimshade.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Locations\" />
+    <Folder Include="npcs\" />
+  </ItemGroup>
+
 </Project>
